Fixed profile not displaying on mobile

--- a/less/stylesheets/sections/mobile.less
+++ b/less/stylesheets/sections/mobile.less
@@ -98,10 +98,10 @@
   .search{
     top: 11px;
     right: 10px;
-  }
+}
 
   #profile {
-    display: none;
+    right: 0;
   }
 
   #nav {
